add updated changes.

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
       </div>
       <h2 class="spacer40 largeFont4 red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
       <h2 class="spacer40 largeFont2">DOUBLE REWARDS!!!</h2>
-      <h1 class="spacer40 orange largeFont4 navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves every 7 cases you buy$</h1>
+      <h1 class="spacertop40 orange largeFont6 navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves</h1>
+      <h1 class="largeFont4 spacertop10">Every 7 cases you buy$</h1>
       <h2 class="spacer0 largeFont3">REWARDS!</h2>
-      <h2 class="spacer5 largeFont1 spacertop0">Every 7 cases, over any period of time you buy!</h2>
-      <p class="spacer5 largeFont1 "><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
+      <p class="spacer5 largeFont3 "><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
       <h2 class="spacer20 largeFont2 stretch1 spacerbot40"><span class="largeFont3">1000</span> Free Glove Rewards! Never Stop! Forever!</h2>
       <div class="contactBlock1">
           <h2 class="spacer10">CONTACT US</h2>
@@ -35,14 +35,17 @@
         <h2 class="largeFont3">Review the 6 pages on this flyer, and <a href="index_print.html">click here</a> for a printer friendly version!</h2>
     </div>
     <div id="page2" class="pageBorder">
-      <h2 class="spacer40 largeFont4 red">ATTRACTIVE - FUN - COOL COLORS!</h2>
+      <h2 class="spacer40 largeFont4 ">ATTRACTIVE - FUN - COOL COLORS!</h2>
       <h2 class="spacer10 largeFont3"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
       <h2 class="spacer10 largeFont2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
       <p class="largeFont1">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
       <h1 class="darkBlue largeFont4 stretch2 spacer20">FREQUENT BUYER REWARDS!</h1>
       <h3 class="spacer10 largeFont3">Just buy 7 cases, over any period of time and choose your reward!</h3>
       <h3 class="spacer10 largeFont3">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
-      <h3 class="spacer20 largeFont3 stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
+      <div class="flex-container">
+        <h1 class="largeFont4">NOW</h1>
+          <h3 class=" paddingLeft20 spacer20 largeFont3 stretch2 italics high"><span class="highlightYellow">CALL or email for a<br> FREE sample today!</span></h3>
+      </div>
       <h3 class="largeFont3">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class="flex-container1">
         <div class="orderNow">
@@ -63,7 +66,7 @@
             <div class="adenna-grid">
               <div class="adennaItem1">
               <h1 class="spacer10 largeFont2">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h1>
-              <h1 class="spacer10 largeFont2">$11.50 per box 200 gloves</h1>
+              <h1 class="spacer10 largeFont2"><span class="red">$11.50</span> per box 200 gloves</h1>
               <h1 class="spacertop0 largeFont2">10 boxes per case - 2000 gloves</h1>
             </div>
                 <div class="CliniciansReport black">
@@ -78,7 +81,7 @@
           <div class="StarMedPlus purple">
           <h1 class="largeFont3 spacerbot0">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
           <h1 class="largeFont2 spacer10">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h1>
-          <h1 class="largeFont2 spacer10">$16.95 per box - 300 gloves</h1>
+          <h1 class="largeFont2 spacer10"><span class="red">$16.95</span> per box - 300 gloves</h1>
           <h1 class="largeFont2 spacer10">10 boxes per case  $169.50 per case - 3000 gloves</h1>
           <h1 class="red largeFont2 spacertop0">After reward price $5.15 per 100 gloves</h1>
         </div>
@@ -147,9 +150,8 @@
       <h1 class="spacer5">1000 FREE GLOVES or $50.00 gift card to a retail establishment of your choice!!</h1>
     </div>
     <div id="page5" class="pageBorder">
-      <h1 class="spacer20 largeFont5 stretch3 spacerbot0">No more dry hands!</h1>
       <div id="koolTouch">
-      <h1 class="marker spacer10 largeFont3">KOOLTOUCH-E</h1>
+      <h1 class="marker spacer20 largeFont5">KOOLTOUCH-E</h1>
       </div>
       <h2 class="spacer5 spacerbot20 largeFont2"><span class="highlightYellow">Bright white Nitrile with moisturizer</span></h2>
       <div class="flex-containerThreebox">
@@ -168,7 +170,7 @@
       <div class="largefont20px">
         <h1 class="spacer5">Super stretchy - 2nd skin feel - comfortable fit!</h1>
         <h1 class="spacer5 stretch1"><span class="highlightYellow">Treat yourself to soft and healthy hands!</span></h1>
-        <h1 class="spacer10">The Nitrile KOOLTOUCH BLUE and KOOLTOUCHe white <br>packaged 150 gloves per box, 20 boxes per case.</h1>
+        <h1 class="spacer10">The Nitrile KOOLTOUCHe <span class="highlightBlue">BLUE</span> and KOOLTOUCHe white <br>packaged 150 gloves per box, 20 boxes per case.</h1>
         <h1 class="spacer10 stretch1">Eco-Friendly, space saving packaging,</h1>
         <h1 class="spacer10 stretch1">10 boxes takes up the space of 15 boxes,</h1>
         <h1 class="spacer10 stretch1">Saves time in replenishing workstations,</h1>
@@ -200,10 +202,8 @@
       <h1>PROTECT GLOVE 1-800-344-2851 or 1-855-344-2851<br>PROGLOVE@MSN.COM</h1>
     </div>
     <div id="page6" class="pageBorder">
-      <h1 class="largeFont5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Exam Dental Gloves$$$</h1>
-      <h1 class="largeFont3 spacer0">The Following Brand $</h1>
-      <h1 class="largeFont6 spacer5 stretch1 ">Adenna</h1>
-      <h1 class="largeFont2 spacer10">We'll <span class="italics largeFont3">Meet</span> or <span class="italics largeFont3">Beat</span> Any Price $</h1>
+      <h1 class="largeFont5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Adenna Brand Gloves!</h1>
+      <h1 class="largeFont4 spacer10">We'll <span class="italics largeFont6">Meet</span> or <span class="italics largeFont6">Beat</span> Any Price $</h1>
       <h1 class="largeFont5 bold itallics spacer10">PLUS</h1>
       <h1 class="largeFont4 spacer0 italics">Thousands of <span class=" green">Free Award Winning Gloves</span> </h1>
       <h1 class="largeFont5 italics underline stretch1 red spacertop0">Forever!</h1>
@@ -214,7 +214,7 @@
           <h3 class=" largeFont3 spacertop20">ORDER <br>NOW!</h3>
         </div>
         <div class="callToday largeFont2">
-          <h4 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h4>
+          <h4 class="spacer20"><span class="highlightBlue">CALL TODAY or EMAIL PROTECT GLOVE</span?</h4>
           <h4  class="spacertop10 spacerbot0">1-800-344-2851 or email proglove@msn.com</h4>
         </div>
       </div>
