--- a/index_print.html
+++ b/index_print.html
@@ -18,7 +18,8 @@
       </div>
       <h2 class="spacer40 largeFont2em spacer025em red">ONE FULL YEAR $$$ EXTREME <br>SAVINGS!</h2>
       <h2 class="spacer40 largeFont15em spacer005em 2">DOUBLE REWARDS!!!</h2>
-      <h1 class="spacer40 orange largeFont3em spacer025em navyBlue"> 2000<span class="underline"> FREE</span> Award winning Gloves every 7 cases you buy$</h1>
+      <h1 class="orange largeFont6 navyBlue spacer025em"> 2000<span class="underline"> FREE</span> Award winning Gloves</h1>
+      <h1 class="largeFont4 spacer025em">Every 7 cases you buy$</h1>
       <h2 class="spacer025em largeFont175em">REWARDS!</h2>
       <h2 class="spacer005em spacertop0">Every 7 cases, over any period of time you buy!</h2>
       <p class="spacer005em largeFont15em"><span class="highlightYellow">SAVE OVER $1.00 on EVERY 100 GLOVES</span></p>
@@ -31,14 +32,17 @@
         <h2 class="largeFont15em spacer025em ">Review the 6 pages on this flyer, and print them for your files!</h2>
     </div>
     <div id="page2" class="pageBorder">
-      <h1 class="largeFont2em red spacerbot0">ATTRACTIVE - FUN - COOL COLORS!</h2>
+      <h1 class="largeFont2em spacerbot0">ATTRACTIVE - FUN - COOL COLORS!</h2>
       <h2 class="spacer005em text28px y50percent"><span class="blue">BLUE</span>, <span class="hotPinkText">HOT PINK</span>, <span class="coralText">CORAL</span>, <span class="darkBlue">DARK BLUE</span>, <span class="purple">PURPLE</span> NITRILE</h2>
       <h2 class="spacer025em 2">GREAT PRICE - BEST QUALITY - BEST REWARDS!</h2>
       <p class="largeFont125em spacer005em ">FREE GLOVES - <span class="underline">REWARDS</span> <br><span class="underline">SAVE</span><br>50 TO 70 CENTS<br>EVERY 100 GLOVES</p>
       <h1 class="darkBlue largeFont3em stretch2 spacer005em">FREQUENT BUYER REWARDS!</h1>
       <h3 class="largeFont125em spacer005em">Just buy 7 cases, over any period of time and choose your reward!</h3>
       <h3 class=" largeFont125em spacer05em">1000 FREE GLOVES or $50.00 gift card to a retail establisment of your choice!</h3>
-      <h3 class="spacer20 largeFont15em stretch2 italics">CALL or email for a<br> FREE sample today!</h3>
+      <div class="flex-container">
+        <h1 class="largeFont4">NOW</h1>
+          <h3 class=" paddingLeft10 spacer20 largeFont3 stretch2 italics high"><span class="highlightYellow">CALL or email for a<br> FREE sample today!</span></h3>
+      </div>
       <h3 class="largeFont12em">Give us your name, Doctor's name/clinic name, complete address, <br>phone number, and a list of of sizes your office uses. EASY!</h3>
       <div class="flex-container2">
         <div class="orderNow largeFont1">
@@ -59,7 +63,7 @@
             <div class="adenna-grid">
                 <div class="adennaItem1 largeFont2em">
               <h6 class="spacer0">GREAT PRICE only <span class="red">$5.75</span> per 100 gloves</h6>
-              <h6 class="spacer0">$11.50 per box 200 gloves</h6>
+              <h6 class="spacer0"><span class="red">$11.50</span> per box 200 gloves</h6>
               <h6 class="spacer0">10 boxes per case - 2000 gloves</h6>
             </div>
                 <div class="CliniciansReport black">
@@ -75,7 +79,7 @@
           <h1 class="spacer0 largeFont175em">STAR MED PLUS - ROYAL PURPLE NITRILE</h1>
             <div class="largeFont125em">
               <h3 class="spacer0">GREAT PRICE only <span class="red">$5.65</span> per 100 gloves</h3>
-              <h3 class="spacer0">$16.95 per box - 300 gloves</h3>
+              <h3 class="spacer0"><span class="red">$16.95</span> per box - 300 gloves</h3>
               <h3 class="spacer0">10 boxes per case  $169.50 per case - 3000 gloves</h3>
             </div>
           <h1 class="red largeFont2em spacer025em">After reward price $5.15 per 100 gloves</h1>
@@ -144,9 +148,8 @@
       <h2 class="spacer025em">1000 FREE GLOVES or $50.00 gift card to a retail establishment of your choice!!</h2>
     </div>
     <div id="page5" class="pageBorder">
-      <h1 class="spacer20 5 x50percent  spacerbot0">No more dry hands!</h1>
       <div id="koolTouch">
-      <h1 class="marker spacer005em 3">KOOLTOUCH-E</h1>
+        <h1 class="marker largeFont2em">KOOLTOUCH-E</h1>
       </div>
       <h2 class="spacer005em spacerbot20 2"><span class="highlightYellow">Bright white Nitrile with moisturizer</span></h2>
       <div class="flex-containerThreebox">
@@ -165,7 +168,7 @@
       <div class="">
         <h3 class="spacer025em">Super stretchy - 2nd skin feel - comfortable fit!</h3>
         <h3 class="spacer025em stretch3"><span class="highlightYellow">Treat yourself to soft and healthy hands!</span></h3>
-        <h3 class="spacer025em">The Nitrile KOOLTOUCH-E BLUE and KOOLTOUCH-E WHITE <br>packaged 150 gloves per box, 20 boxes per case.</h3>
+        <h3 class="spacer025em">The Nitrile KOOLTOUCHe <span class="highlightBlue">BLUE</span> and KOOLTOUCHe WHITE <br>packaged 150 gloves per box, 20 boxes per case.</h3>
         <h3 class="spacer025em stretch3">Eco-Friendly, space saving packaging,</h3>
         <h3 class="spacer025em stretch3">10 boxes takes up the space of 15 boxes,</h3>
         <h3 class="spacer025em stretch3">Saves time in replenishing workstations,</h3>
@@ -178,7 +181,7 @@
           <h1 class="spacer025em"><span class=" 2 highlightYellow">$5.99 - 100 Gloves<span></h1>
         </div>
         <div id="pg5150gloves">
-          <h1 class="spacer025em"><span class="2 highlightYellow">$8.985 - 150 Gloves<span></h1>
+          <h1 class="spacer025em"><span class="2 highlightYellow">$8.98 - 150 Gloves<span></h1>
         </div>
       </div>
       <h3 class=" spacer005em ">Mix-sizes and colors to form a full case</h3>
@@ -197,10 +200,8 @@
       <h2 class="spacer005em largeFont15em">PROTECT GLOVE 1-800-344-2851 or 1-855-344-2851<br>PROGLOVE@MSN.COM</h2>
     </div>
     <div id="page6" class="pageBorder">
-      <h1 class="5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Exam Dental Gloves$$$</h1>
-      <h1 class=" spacer0">The Following Brand $</h1>
-      <h1 class=" largeFont2em spacer025em ">Adenna</h1>
-      <h1 class=" spacer005em">We'll <span class="italics 3">Meet</span> or <span class="italics 3">Beat</span> Any Price $</h1>
+      <h1 class="largeFont5 itallics stretch1 spacerbot0 spacertop25 navyBlue">Cut Cost - Adenna Brand Gloves!</h1>
+      <h1 class="largeFont4 spacer10">We'll <span class="italics largeFont6">Meet</span> or <span class="italics largeFont6">Beat</span> Any Price $</h1>
       <h1 class="5 bold itallics spacer10">PLUS</h1>
       <h1 class="4 spacer0 italics">Thousands of <span class=" green">Free Award Winning Gloves</span> </h1>
       <h1 class="5 italics underline stretch1 red spacertop0">Forever!</h1>
@@ -211,7 +212,7 @@
           <h2 class=" 3 spacertop31">ORDER <br>NOW!</h2>
         </div>
         <div class="callToday 2">
-          <h2 class="spacer20">CALL TODAY or EMAIL PROTECT GLOVE</h2>
+          <h2 class="spacer20"><span class="highlightBlue">CALL TODAY or EMAIL PROTECT GLOVE</span></h2>
             <h2  class="spacertop10 spacerbot0">1-800-344-2851 or email proglove@msn.com</h2>
         </div>
       </div>
